--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<input type="number" id="telefone" required placeholder="telefone" />
 			<button type="submit">Cadastrar</button>
 		</form>
-		<table>
+		<table cellspacing="0">
 			<thead>
 				<tr>
 					<th>Nome</th>
